<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_forms"
        android:enabled="true"
        android:icon="@drawable/ic_assignment_black_24dp"
        android:title="@string/forms"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_projects"
        android:enabled="true"
        android:icon="@drawable/ic_folder_open_black_24dp"
        android:title="@string/projects"
        app:showAsAction="ifRoom" />
</menu>