<?xml version="1.0" encoding="utf-8"?>
<androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/form_list"
    android:name="es.jcyl.ita.frmdrd.FormListFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    app:layoutManager="LinearLayoutManager"
    tools:context="es.jcyl.ita.formic.forms.view.activities.FormListFragment"
    tools:listitem="@layout/form_list_item" />
